// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test TableContainer UI Default 1`] = `
<DocumentFragment>
  <div
    class="overflow-scroll w-full"
  >
    <table
      class="w-full"
    />
  </div>
</DocumentFragment>
`;

exports[`Test TableContainer UI Test with children prop 1`] = `
<DocumentFragment>
  <div
    class="overflow-scroll w-full"
  >
    <table
      class="w-full"
    />
  </div>
</DocumentFragment>
`;

exports[`Test TableContainer UI Test with className prop 1`] = `
<DocumentFragment>
  <div
    class="test-class-name overflow-scroll w-full"
  >
    <table
      class="w-full"
    />
  </div>
</DocumentFragment>
`;
